# threaded-map-reduce

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO  performance.md  pyproject.toml
performance/: chunk_size_relevance.py  futures_vs_this_map_performance.py  map_performance.py  other_implementations.py  performance_utils.py  reduce_performance.py  reduce_performance2.py
src/split_gvcf/: gvcf_parser.py  ranges_union.py  threaded_reduce.py
src/threaded_map_reduce/: __init__.py  futures_map_reduce.py  old_implementations.py  threaded_map_reduce.py
test/: test_gvcf_parser.py  test_ranges_union.py  test_reduce.py
