[project]
name = "threaded_map_reduce"
version = "0.1.0"
description = "A threaded version of map reduce"
readme = "README.md"
authors = [
    { name = "Jose Blanca", email = "jblanca@upv.es" }
]
license = "MIT"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
]
