[project]
name = "threaded_map_reduce"
version = "0.1.1"
description = "A threaded version of map reduce"
readme = "README.md"
authors = [
    { name = "Jose Blanca", email = "jblanca@upv.es" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
requires-python = ">=3.13"
dependencies = []

[project.urls]
Homepage = "https://github.com/JoseBlanca/threaded-map-reduce"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
]
